<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OHM Magnet Therapy - Admin</string>
    <string name="label_login_here">Login Here</string>
    <string name="hint_enter_phone_number">Enter Phone Number</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="label_let_s_go">Let\'s Go</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>
    <string name="label_home">Home</string>
    <string name="magnet_details">Magnet Details</string>
    <string name="label_prospection_services">Prospection Services</string>
    <string name="label_about_us">About Us</string>
    <string name="label_contact_us">Contact Us</string>
    <string name="label_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_appointment">Appointment</string>
    <string name="label_no_internet_connection_ntry_again">No Internet Connection!\nTry Again</string>
    <string name="label_patient_name">Patient Name:</string>
    <string name="label_contact_number">Contact Number</string>
    <string name="label_appointment_time">Appointment Time:</string>
    <string name="button_accept">accept</string>
    <string name="button_cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="label_appointment_approved">Appointment Approved</string>
    <string name="label_appointment_canceled">Appointment Canceled</string>
    <string name="label_feedback">Feedback</string>
    <string name="label_subject">Subject:</string>
    <string name="label_message">Message:</string>
    <string name="label_why_this_therapy">Why This Therapy?</string>
    <string name="label_why_this_therapy_guj">આ થેરાપી શા માટે ?</string>
    <string name="label_gujarati">ગુજરાતી</string>
    <string name="label_english">English</string>
    <string name="label_edit">Edit</string>
    <string name="label_edit_gujju">સંપાદિત કરો</string>
    <string name="label_why_prospection_eng">How it works?</string>
    <string name="label_why_prospection_guj">કેવી રીતે સારવાર થાય છે ?</string>
    <string name="label_prospection">Prospection Service</string>


    <string name="label_dr_phone_91_7016244301">+91 7016244301</string>
    <string name="label_dr_email_bkalpesh7_gmail_com">bkalpesh7@gmail.com</string>
    <string name="label_address">SF/1 Jaydev Sankul, near Bajkhedavaad Hostel, Bhaikaka Statue Road,Vidyanagar</string>
    <string name="label_dr_name">Dr. Kalpesh Bhatt</string>
    <string name="label_edit_profile">Edit Profile</string>
    <string name="button_save">Save</string>
    <string name="hint_dr_name">Dr. Name</string>
    <string name="hint_enter_email_address">Enter Email Address</string>
    <string name="hint_enter_address">Enter Address</string>
    <string name="hint_enter_username">Enter Username</string>
    <string name="label_about_magnet_therapy">About Magnet Therapy</string>
    <string name="label_add_magnet_images">Add Magnet Images</string>
    <string name="label_add_image">Add Image</string>
    <string name="hint_appointment_date">Appointment Date:</string>
    <string name="hint_note">Note:</string>
    <string name="label_click_to_add_note">Click to add Note.</string>
    <string name="label_add_note">Add Note:</string>
    <string name="hint_enter_note">enter note</string>
    <string name="button_add_note">Add Note</string>

</resources>